--- a/.env.production
+++ b/.env.production
@@ -9,7 +9,7 @@ DB_HOST=localhost
 DB_PORT=3306
 DB_DATABASE=soa
 DB_USERNAME=root
-DB_PASSWORD=''
+DB_PASSWORD='SOAayd2'
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
