--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ php:
   - 5.6
 
 before_script:
-  - cp .env.travis .env
+  - cp .env.production .env
   - php artisan key:generate
   - composer self-update
   - composer install --no-interaction
